# dred.py

./: README.md  pyproject.toml
dred/: dred.py
